; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-pca-platform.c_i2c_pca_pf_handler.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-pca-platform.c_i2c_pca_pf_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_pca_pf_data = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.i2c_pca_pf_data.0*, i32)* }
%struct.i2c_pca_pf_data.0 = type opaque

@I2C_PCA_CON = common dso_local global i32 0, align 4
@I2C_PCA_CON_SI = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @i2c_pca_pf_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_pca_pf_handler(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.i2c_pca_pf_data*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.i2c_pca_pf_data*
  store %struct.i2c_pca_pf_data* %8, %struct.i2c_pca_pf_data** %6, align 8
  %9 = load %struct.i2c_pca_pf_data*, %struct.i2c_pca_pf_data** %6, align 8
  %10 = getelementptr inbounds %struct.i2c_pca_pf_data, %struct.i2c_pca_pf_data* %9, i32 0, i32 1
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.i2c_pca_pf_data.0*, i32)*, i32 (%struct.i2c_pca_pf_data.0*, i32)** %11, align 8
  %13 = load %struct.i2c_pca_pf_data*, %struct.i2c_pca_pf_data** %6, align 8
  %14 = bitcast %struct.i2c_pca_pf_data* %13 to %struct.i2c_pca_pf_data.0*
  %15 = load i32, i32* @I2C_PCA_CON, align 4
  %16 = call i32 %12(%struct.i2c_pca_pf_data.0* %14, i32 %15)
  %17 = load i32, i32* @I2C_PCA_CON_SI, align 4
  %18 = and i32 %16, %17
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @IRQ_NONE, align 4
  store i32 %21, i32* %3, align 4
  br label %27

22:                                               ; preds = %2
  %23 = load %struct.i2c_pca_pf_data*, %struct.i2c_pca_pf_data** %6, align 8
  %24 = getelementptr inbounds %struct.i2c_pca_pf_data, %struct.i2c_pca_pf_data* %23, i32 0, i32 0
  %25 = call i32 @wake_up(i32* %24)
  %26 = load i32, i32* @IRQ_HANDLED, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %22, %20
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @wake_up(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
